tests/golden/reject/ref_struct_render_reject.goo
// ref_struct_render_reject (P2.8 T4.1 audit): type_reference's display name
// used the referenced type's bare `->name` field, which is NULL for a
// struct (its declared name lives in data.struct_type.name instead) — so
// &Point rendered as "&?" in diagnostics before this fix. Render via
// type_to_string, not the bare field.
package main

type Point struct {
	x int
}

func main() {
	var r &Point
	var n int = r
	_ = n
}
